incomplete import executor implementation